<resources>
    <string name="app_name">TodoEkspert</string>
    <string name="login">login</string>
    <string name="username">Enter your username</string>
    <string name="password">Password</string>
    <string name="this_field_is_required">This field is required!</string>
    <string name="login_ok">Login OK</string>
    <string name="action_add">Add</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="what_needs">What needs to be done ?</string>
    <string name="done">Done</string>
    <string name="save">Add Todo</string>
    <string name="signup">Sign up</string>
    <string name="title_activity_sign_up">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
